# FortuneAlgorithm

./: .gitignore  CMakeLists.txt  Fortune.sln  LICENSE.md  README.md
Fortune/: Fortune.vcxproj  main.cpp
